# peru-prices

./: .gitignore  Cargo.toml  README.md  justfile  requirements.txt
.github/workflows/: build.yml  launch.yml  launch.yml.off
configuration/: base.yaml  local.yaml  production.yaml
docs/: index-listing.json  index.html  listings.json  search.json
docs/_site/: index.html  search.json
docs/_site/nbs/: 30092022_explore-data.html
docs/nbs/: 30092022_explore-data.html
output/: metro_20220830.csv  metro_20220831.csv  metro_20220901.csv  metro_20220902.csv  metro_20220903.csv  metro_20220904.csv  metro_20220905.csv  metro_20220912.csv  metro_20220919.csv  metro_20220926.csv  metro_20221003.csv  metro_20221006.csv  metro_20221010.csv  metro_20221013.csv  metro_20221017.csv  metro_20221020.csv  metro_20221024.csv  metro_20221027.csv  metro_20221031.csv  metro_20221103.csv  metro_20221107.csv  metro_20221110.csv  metro_20221114.csv  metro_20221117.csv  metro_20221121.csv  metro_20221124.csv  metro_20221128.csv  metro_20221201.csv  metro_20221205.csv  metro_20221208.csv  metro_20221212.csv  metro_20221215.csv  metro_20221219.csv  metro_20221222.csv  metro_20221226.csv  metro_20221229.csv  metro_20230102.csv  metro_20230105.csv  metro_20230109.csv  metro_20230112.csv  (+352 more)
quarto_site/: _quarto.yml  index.qmd
quarto_site/nbs/: 30092022_explore-data.ipynb  _metadata.yml
site/: index.html  search.json
src/: configuration.rs  crawler.rs  lib.rs  main.rs
src/spiders/: infinite_scrolling.rs  metro.rs  mod.rs  multipage.rs
