[package]
name = "peru-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.22"
reqwest = "0.11"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
reqwest-tracing = "0.3"
thiserror = "1"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
